samples/_failures_safe/1761669362_394927_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25459470.c: In function ‘main’:
./samples/SAFE/__tmp_25459470.c:166:9: error: expected declaration or statement at end of input
  166 |         printf("%d ", popped);
      |         ^~~~~~
./samples/SAFE/__tmp_25459470.c:166:9: error: expected declaration or statement at end of input
